required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- KML: fix rounding problem for point feautres (#3767)

- KML: update code to reflect output changes. Fix true type symbols. (#3766)

- SLD: Text Symbolizer now uses the new expression syntax (#3757)

- WFS: correct bbox values for GetFeature with featureid request (#3761) 

- Mapscript Seg Fault on mapObj->getMetaData (#3738)

- Correct double free in msCleanup().

- Initialize default formats in WCS.

- Fix csharp Makefile.in (#3758)

- Allow run-time subs in class->text (makes sense if you allow it in 
  class->expression).

- Fix build problem when --enable-cgi-cl-debug-args is enabled (#2853)

Version 6.0.0-beta2 (2011-03-18)
--------------------------------

- correct scaling of symbol GAP and PATTERN (#3752)

- remove references to SWF/MING

- CGI runtime substitution requires a validation pattern (was optional 
  before) (#3522)

- add a default png8 outputformat that uses AGG/PNG with quantization

- change MS_INIT_COLOR to take alpha as a parameter

- stop using style->opacity in rendering code, use alpha from colorObjs.

- Fixed big Oracle memory leak when rendering in KML (#3719)

- avoid linking in postgres dependencies unnecessarily (#3708)

- don't initialize outputformats until they are selected

- use "seamless" creation of tiles for polygon fills with vector symbols

- Ability to escape single/double quotes inside a string (#3706)

- Globally replace msCaseFindSubstring with strcasestr (#3255)

- support GROUP layers in shp2img (#3746)

- Honour MAXSIZE for WCS 2.0 responses (#3204).

- fallback to ows_title for WCS ows:Title of CoverageDescription (#3528)
