@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Rendering: scale style OFFSET and GAP the same way we scale other style attributes.
+  Beforehand, we scaled them proportionaly to the computeed width.
+
 - KML: fix rounding problem for point feautres (#3767)
 
 - KML: update code to reflect output changes. Fix true type symbols. (#3766)
